tests/NormalTests/paczka1/fuzzy1/17321808.err
Error in line 1: 8I8Ao2cvBPx A270 99,0
Error in line 9: 8I8Ao2cvBPx A477 80,6
Error in line 14: S487 A477 48,1
Error in line 21: ycWNWq4 S487 40,98
Error in line 20: AaIeE4 S487 53,3
Error in line 22: 75jFkx4751 S487 52,3
Error in line 33: Puf1JIP A270 -3,9
Error in line 35: TX8 S1 67,5
Error in line 30: 75jFkx4751 A477 58,5
Error in line 38: 75jFkx4751 A270 87,3
